# DEMOSim

./: .gitignore  Cargo.toml  DEMOSim example.json  Dockerfile  README.md  compile.sh  demosim-1ac96d2eaf42e38d.js  demosim-1ac96d2eaf42e38d_bg.wasm  index.html  model.json
.github/workflows/: pages.yml
assets/: sw.js
models/: model.dms
src/: app.rs  execution.rs  lib.rs  main.rs  model.rs  persistence.rs
src/components/: mod.rs
src/components/c_fact_selector/: button.rs  mod.rs  popup.rs
src/model/: model.rs
src/windows/: actor_roles.rs  adt.rs  c_p_world.rs  mod.rs  performers.rs  performers_dashboard.rs  subjects.rs  subjects_dashboard.rs  transaction_initiate_modal.rs  transactions.rs  transactions_instances.rs
