[package]
name = "demosim"
version = "0.1.0"
authors = ["Robert Pergl <perglr@fit.cvut.cz>"]
edition = "2021"


[dependencies]
egui = "0.27.2"
eframe = { version = "0.27.2", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.115"
egui_extras = "0.27.2"
log = "0.4"
uuid = { version = "1.8", features = ["serde", "v4"] }
web-sys = { version = "0.3", features = ["Storage"] }
strum = "0.26.2"
strum_macros = "0.26.2"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
